--- a/index.html
+++ b/index.html
@@ -10,30 +10,31 @@
 </head>
 <body>
 
-	<div class="header">
-		<div class="logo">
-			<img src="./resources/images/ic-logo.svg">
-			<h3><span>COLMAR</span>ACADEMY</h3>
-		</div>
-		<div class="menu">
-			<ul>
-				<li><a href="#">On Campus</a></li>
-				<li><a href="#">Online</a></li>
-				<li><a href="#">For companies</a></li>
-				<li><a href="#">Sign in</a></li>
-			</ul>
-		</div>
+<div class="header">
+	<div class="logo">
+		<img src="./resources/images/ic-logo.svg">
+		<h3><span>COLMAR</span>ACADEMY</h3>
 	</div>
+	<div class="menu">
+		<ul>
+			<li><a href="#">On Campus</a></li>
+			<li><a href="#">Online</a></li>
+			<li><a href="#">For companies</a></li>
+			<li><a href="#">Sign in</a></li>
+		</ul>
+	</div>
+</div>
 
 
 <div class="banner">
-	<div class="container">
-		<img src="./resources/images/banner.jpg">
-		<div class="banner-content">
-			<h2>Learn something new everyday</h2>
-			<p>Loren ipsum dolor sit amet, consectetur adipiscing elit.</p>
-			<h4 id="button">Start here</h4>
-		</div>
+	<img src="./resources/images/banner.jpg">
+
+	<div class="banner-content">
+		<h2>Learn something new everyday</h2>
+		<p>Loren ipsum dolor sit amet, consectetur adipiscing elit.</p>
+		<div class="button">
+		<h4>Start here</h4>
+	</div>
 	</div>
 </div>
 
