--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 </head>
 <body>
 
+<!-- Header section -->
+
 <div class="header">
 	<div class="logo">
 		<img src="./resources/images/ic-logo.svg">
@@ -25,6 +27,7 @@
 	</div>
 </div>
 
+<!-- Banner section -->
 
 <div class="banner">
 	<img src="./resources/images/banner.jpg">
@@ -32,11 +35,135 @@
 	<div class="banner-content">
 		<h2>Learn something new everyday</h2>
 		<p>Loren ipsum dolor sit amet, consectetur adipiscing elit.</p>
-		<div class="button">
-		<h4>Start here</h4>
+		<a href="#">Start here</a>
+	</div> 
+</div>
+
+<!-- Article section -->
+
+<div class="article">
+	<div class="main-article">
+		<img src="./resources/images/information-main.jpg">
+		<div class="article-support">
+			<h3 id="title-md">It doesn't hurt to keep practicing</h3>
+			<p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam at commondo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, effictur dolor consequat, trisque ligula."</p>
+			<h6>Emanuel, Sr Strategist at Hiring.com</h6>
+		</div>
 	</div>
+	
+	<div class="sub-article">
+		<div class="info-box">
+			<img src="./resources/images/information-orientation.jpg">
+			<div class="info-content">
+				<p>Orientation Date</p>
+				<h5>Tue 10/11 &amp; Wed 10/12 8am - 3pm</h5>
+				<p><a href="#">Read more</a></p>
+			</div>
+		</div>
+
+		<div class="info-box">
+			<img src="./resources/images/information-campus.jpg">
+			<div class="info-content">
+				<p>Our campus</p>
+				<h5>Find which campus is close by you</h5>
+				<p><a href="#">Read more</a></p>
+			</div>
+		</div>
+
+		<div class="info-box">
+			<img src="./resources/images/information-guest-lecture.jpg">
+			<div class="info-content">
+				<p>Our guest lecture</p>
+				<h5>Join a keynote with Oliver Sack about music in medical treatment</h5>
+				<p><a href="#">Read more</a></p>
+			</div>
+		</div>
 	</div>
 </div>
+
+<!-- Courses section -->
+
+<div class="courses">
+	<h3 id="title-md">Start learning</h3>
+	<div class="course-container">
+		<div class="row">
+			<div class="course-box">
+				<img src="./resources/images/course-software.jpg">
+				<div class="decsription">
+					<p>Software engineering</p>
+					<p>COURSES</p>
+					<p>Web Developement, Mobile Developement, iOT, APIs</p>
+				</div>
+			</div>
+
+			<div class="course-box">
+				<img src="./resources/images/course-computer-art.jpg">
+				<p>Computer art</p>
+				<p>COURSES</p>
+				<p>Imaging &amp; Design, Web Design Motion Graphics &amp; Visual Effects, Computer Animation</p>
+			</div>
+
+			<div class="course-box">
+				<img src="./resources/images/course-design.jpg">
+				<div class="decsription">
+					<p>Design</p>
+					<p>COURSES</p>
+					<p>User Experience Design, User Research, Visual Design</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="course-box">
+				<img src="./resources/images/course-data.jpg">
+				<div class="decsription">
+					<p>Data</p>
+					<p>COURSES</p>
+					<p>Data Science, Big Data, SQL, Data Visualization</p>
+				</div>
+			</div>
+
+			<div class="course-box">
+				<img src="./resources/images/course-business.jpg">
+				<div class="decsription">
+					<p>COURSES</p>
+					<p>Business</p>
+					<p>Product Developement, Business Developement, Startup</p>
+				</div>
+			</div>
+
+			<div class="course-box">
+				<img src="./resources/images/course-marketing.jpg">
+				<div class="decsription">
+					<p>Marketing</p>
+					<p>COURSES</p>
+					<p>Analystics, Content Marketing, Mobile Marketing</p>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+<!-- Exhibit Section -->
+
+<div class="exhibit">
+	<h3 id="title-md">Thesis Exhibit</h3>
+	<div class="main-exhibit">
+	
+
+	</div>
+
+	<div class="sub-exhibit">
+
+	</div>
+
+
+
+
+
+
+
+
 
 
 
