--- a/index.html
+++ b/index.html
@@ -88,26 +88,34 @@
 	<div class="course-container">
 		<div class="row">
 			<div class="course-box">
-				<img src="./resources/images/course-software.jpg">
-				<div class="decsription">
+				<div class="box-top>">
+					<img src="./resources/images/course-software.jpg">
 					<p>Software engineering</p>
 					<p>COURSES</p>
+				</div>	
+				<div class="box-bottom">
 					<p>Web Developement, Mobile Developement, iOT, APIs</p>
 				</div>
 			</div>
 
-			<div class="course-box">
-				<img src="./resources/images/course-computer-art.jpg">
-				<p>Computer art</p>
-				<p>COURSES</p>
-				<p>Imaging &amp; Design, Web Design Motion Graphics &amp; Visual Effects, Computer Animation</p>
+			<div class="course-box" id="box-middle">
+				<div class="box-top">
+					<img src="./resources/images/course-computer-art.jpg">
+					<p>Computer art</p>
+					<p>COURSES</p>
+				</div>
+				<div class="box-bottom">
+					<p>Imaging &amp; Design, Web Design Motion Graphics &amp; Visual Effects, Computer Animation</p>
+				</div>
 			</div>
 
 			<div class="course-box">
-				<img src="./resources/images/course-design.jpg">
-				<div class="decsription">
+				<div class="box-top">
+					<img src="./resources/images/course-design.jpg">			
 					<p>Design</p>
 					<p>COURSES</p>
+				</div>
+				<div class="box-bottom">
 					<p>User Experience Design, User Research, Visual Design</p>
 				</div>
 			</div>
@@ -115,28 +123,34 @@
 
 		<div class="row">
 			<div class="course-box">
-				<img src="./resources/images/course-data.jpg">
-				<div class="decsription">
+				<div class="box-top">
+					<img src="./resources/images/course-data.jpg">
 					<p>Data</p>
 					<p>COURSES</p>
+				</div>
+				<div class="box-bottom">
 					<p>Data Science, Big Data, SQL, Data Visualization</p>
 				</div>
 			</div>
 
-			<div class="course-box">
-				<img src="./resources/images/course-business.jpg">
-				<div class="decsription">
-					<p>COURSES</p>
+			<div class="course-box" id="box-middle">
+				<div class="box-top">
+					<img src="./resources/images/course-business.jpg">
 					<p>Business</p>
+					<p>COURSES</p>
+				</div>
+				<div class="box-bottom">
 					<p>Product Developement, Business Developement, Startup</p>
 				</div>
 			</div>
 
 			<div class="course-box">
-				<img src="./resources/images/course-marketing.jpg">
-				<div class="decsription">
+				<div class="box-top">
+					<img src="./resources/images/course-marketing.jpg">
 					<p>Marketing</p>
 					<p>COURSES</p>
+				</div>
+				<div class="box-bottom">
 					<p>Analystics, Content Marketing, Mobile Marketing</p>
 				</div>
 			</div>
@@ -149,7 +163,7 @@
 <div class="exhibit">
 	<h3 id="title-md">Thesis Exhibit</h3>
 	<div class="main-exhibit">
-	
+
 
 	</div>
 
