--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
 	<div class="course-container">
 		<div class="row">
 			<div class="course-box">
-				<div class="box-top>">
+				<div class="box-top">
 					<img src="./resources/images/course-software.jpg">
 					<p>Software engineering</p>
-					<p>COURSES</p>
+					<p id="courses">COURSES</p>
 				</div>	
 				<div class="box-bottom">
 					<p>Web Developement, Mobile Developement, iOT, APIs</p>
@@ -102,7 +102,7 @@
 				<div class="box-top">
 					<img src="./resources/images/course-computer-art.jpg">
 					<p>Computer art</p>
-					<p>COURSES</p>
+					<p id="courses">COURSES</p>
 				</div>
 				<div class="box-bottom">
 					<p>Imaging &amp; Design, Web Design Motion Graphics &amp; Visual Effects, Computer Animation</p>
@@ -113,7 +113,7 @@
 				<div class="box-top">
 					<img src="./resources/images/course-design.jpg">			
 					<p>Design</p>
-					<p>COURSES</p>
+					<p id="courses">COURSES</p>
 				</div>
 				<div class="box-bottom">
 					<p>User Experience Design, User Research, Visual Design</p>
@@ -126,7 +126,7 @@
 				<div class="box-top">
 					<img src="./resources/images/course-data.jpg">
 					<p>Data</p>
-					<p>COURSES</p>
+					<p id="courses">COURSES</p>
 				</div>
 				<div class="box-bottom">
 					<p>Data Science, Big Data, SQL, Data Visualization</p>
@@ -137,7 +137,7 @@
 				<div class="box-top">
 					<img src="./resources/images/course-business.jpg">
 					<p>Business</p>
-					<p>COURSES</p>
+					<p id="courses">COURSES</p>
 				</div>
 				<div class="box-bottom">
 					<p>Product Developement, Business Developement, Startup</p>
@@ -148,7 +148,7 @@
 				<div class="box-top">
 					<img src="./resources/images/course-marketing.jpg">
 					<p>Marketing</p>
-					<p>COURSES</p>
+					<p id="courses">COURSES</p>
 				</div>
 				<div class="box-bottom">
 					<p>Analystics, Content Marketing, Mobile Marketing</p>
