Needs media query

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
 
 	<div class="banner-content">
 		<h2>Learn something new everyday</h2>
-		<p>Loren ipsum dolor sit amet, consectetur adipiscing elit.</p>
+		<h4>because you might find something precious.</h4>
+		<h4>(in my case, coding.)</h4>
 		<a href="#">Start here</a>
 	</div> 
 </div>
@@ -45,7 +46,7 @@
 	<div class="main-article">
 		<img src="./resources/images/information-main.jpg">
 		<div class="article-support">
-			<h3 id="title-md">It doesn't hurt to keep practicing</h3>
+			<h3>It doesn't hurt to keep practicing</h3>
 			<p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam at commondo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, effictur dolor consequat, trisque ligula."</p>
 			<h6>Emanuel, Sr Strategist at Hiring.com</h6>
 		</div>
@@ -55,8 +56,8 @@
 		<div class="info-box">
 			<img src="./resources/images/information-orientation.jpg">
 			<div class="info-content">
-				<p>Orientation Date</p>
-				<h5>Tue 10/11 &amp; Wed 10/12 8am - 3pm</h5>
+				<h4>Orientation Date</h4>
+				<p id="info">Tue 10/11 &amp; Wed 10/12 8am - 3pm</p>
 				<p><a href="#">Read more</a></p>
 			</div>
 		</div>
@@ -64,8 +65,8 @@
 		<div class="info-box">
 			<img src="./resources/images/information-campus.jpg">
 			<div class="info-content">
-				<p>Our campus</p>
-				<h5>Find which campus is close by you</h5>
+				<h4>Our campus</h4>
+				<p id="info">Find which campus is close by you</p>
 				<p><a href="#">Read more</a></p>
 			</div>
 		</div>
@@ -73,8 +74,8 @@
 		<div class="info-box">
 			<img src="./resources/images/information-guest-lecture.jpg">
 			<div class="info-content">
-				<p>Our guest lecture</p>
-				<h5>Join a keynote with Oliver Sack about music in medical treatment</h5>
+				<h4>Our guest lecture</h4>
+				<p id="info">Join a keynote with Oliver Sack about music in medical treatment</p>
 				<p><a href="#">Read more</a></p>
 			</div>
 		</div>
@@ -84,75 +85,63 @@
 <!-- Courses section -->
 
 <div class="courses">
-	<h3 id="title-md">Start learning</h3>
+	<h3>Start learning</h3>
 	<div class="course-container">
-		<div class="row">
+		<div class="row-one">
 			<div class="course-box">
-				<div class="box-top">
 					<img src="./resources/images/course-software.jpg">
-					<p>Software engineering</p>
-					<p id="courses">COURSES</p>
-				</div>	
-				<div class="box-bottom">
-					<p>Web Developement, Mobile Developement, iOT, APIs</p>
-				</div>
+					<div class="description">
+						<h4>Software engineering</h4>
+						<p id="courses">COURSES</p>
+						<p>Web Developement, Mobile Developement, iOT, APIs</p>
+					</div>	
 			</div>
 
 			<div class="course-box" id="box-middle">
-				<div class="box-top">
 					<img src="./resources/images/course-computer-art.jpg">
-					<p>Computer art</p>
-					<p id="courses">COURSES</p>
-				</div>
-				<div class="box-bottom">
-					<p>Imaging &amp; Design, Web Design Motion Graphics &amp; Visual Effects, Computer Animation</p>
-				</div>
+					<div class="description">
+						<h4>Computer art</h4>
+						<p id="courses">COURSES</p>
+						<p>Imaging &amp; Design, Web Design Motion Graphics &amp; Visual Effects, Computer Animation</p>
+					</div>
 			</div>
 
 			<div class="course-box">
-				<div class="box-top">
 					<img src="./resources/images/course-design.jpg">			
-					<p>Design</p>
-					<p id="courses">COURSES</p>
-				</div>
-				<div class="box-bottom">
-					<p>User Experience Design, User Research, Visual Design</p>
-				</div>
+					<div class="description">
+						<h4>Design</h4>
+						<p id="courses">COURSES</p>
+						<p>User Experience Design, User Research, Visual Design</p>
+					</div>
 			</div>
 		</div>
 
-		<div class="row">
+		<div class="row-two">
 			<div class="course-box">
-				<div class="box-top">
 					<img src="./resources/images/course-data.jpg">
-					<p>Data</p>
-					<p id="courses">COURSES</p>
-				</div>
-				<div class="box-bottom">
-					<p>Data Science, Big Data, SQL, Data Visualization</p>
-				</div>
+					<div class="description">
+						<h4>Data</h4>
+						<p id="courses">COURSES</p>
+						<p>Data Science, Big Data, SQL, Data Visualization</p>
+					</div>
 			</div>
 
 			<div class="course-box" id="box-middle">
-				<div class="box-top">
 					<img src="./resources/images/course-business.jpg">
-					<p>Business</p>
-					<p id="courses">COURSES</p>
-				</div>
-				<div class="box-bottom">
-					<p>Product Developement, Business Developement, Startup</p>
-				</div>
+					<div class="description">
+						<h4>Business</h4>
+						<p id="courses">COURSES</p>
+						<p>Product Developement, Business Developement, Startup</p>
+					</div>
 			</div>
 
 			<div class="course-box">
-				<div class="box-top">
 					<img src="./resources/images/course-marketing.jpg">
-					<p>Marketing</p>
-					<p id="courses">COURSES</p>
-				</div>
-				<div class="box-bottom">
-					<p>Analystics, Content Marketing, Mobile Marketing</p>
-				</div>
+					<div class="description">
+						<h4>Marketing</h4>
+						<p id="courses">COURSES</p>
+						<p>Analystics, Content Marketing, Mobile Marketing</p>
+					</div>
 			</div>
 		</div>
 	</div>
@@ -162,24 +151,44 @@
 
 <div class="exhibit">
 	<h3 id="title-md">Thesis Exhibit</h3>
-	<div class="main-exhibit">
+	<div class="exhibit-container">
+		<div class="main-exhibit">
+			<video controls loop>
+					<source src="./resources/videos/thesis.mp4" type="video/mp4"></video>
+			<div class="exhibit-content">
+				<h4>Reimagine urban</h4>
+				<p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam at commondo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, effictur dolor consequat, trisque ligula."</p>
+			</div>
+		</div>
 
+		<div class="sub-exhibit">
+			<div class="exhibit-box">
+				<img src="./resources/images/thesis-fisma.jpg">
+					<div class="description">
+						<h4>Fisma: Design and...</h4>
+						<p>Designer showcase of new prototype product</p>
+					</div>
+			</div>
 
+			<div class="exhibit-box">
+				<img src="./resources/images/thesis-now-and-then.jpg">
+				<div class="description">
+					<h4>Now and then</h4>
+					<p>Research study about New York</p>
+				</div>
+			</div>
+		</div>
 	</div>
+</div>
 
-	<div class="sub-exhibit">
 
+<div class="footer">
+	<h6>&copy; 2016 Colmar Academy. All rights reserved</h6>
+	<div class="legal">
+		<h6>Terms</h6>
+		<h6>Privacy</h6>
 	</div>
-
-
-
-
-
-
-
-
-
-
+</div>
 
 
 </body>
