--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
 
 <div class="banner">
 	<img src="./resources/images/banner.jpg">
-
 	<div class="banner-content">
 		<h2>Learn something new everyday</h2>
 		<h4>because you might find something precious.</h4>
@@ -43,40 +42,42 @@
 <!-- Article section -->
 
 <div class="article">
-	<div class="main-article">
-		<img src="./resources/images/information-main.jpg">
-		<div class="article-support">
-			<h3>It doesn't hurt to keep practicing</h3>
-			<p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam at commondo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, effictur dolor consequat, trisque ligula."</p>
-			<h6>Emanuel, Sr Strategist at Hiring.com</h6>
+	<div class="article-container">
+		<div class="main-article">
+			<img src="./resources/images/information-main.jpg">
+			<div class="article-support">
+				<h3>It doesn't hurt to keep practicing</h3>
+				<p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam at commondo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, effictur dolor consequat, trisque ligula."</p>
+				<h6>Emanuel, Sr Strategist at Hiring.com</h6>
+			</div>
 		</div>
-	</div>
 	
-	<div class="sub-article">
-		<div class="info-box">
-			<img src="./resources/images/information-orientation.jpg">
-			<div class="info-content">
-				<h4>Orientation Date</h4>
-				<p id="info">Tue 10/11 &amp; Wed 10/12 8am - 3pm</p>
-				<p><a href="#">Read more</a></p>
+		<div class="sub-article">
+			<div class="info-box">
+				<img src="./resources/images/information-orientation.jpg">
+				<div class="info-content">
+					<h4>Orientation Date</h4>
+					<p id="info">Tue 10/11 &amp; Wed 10/12 8am - 3pm</p>
+					<p><a href="#">Read more</a></p>
+				</div>
 			</div>
-		</div>
 
-		<div class="info-box">
-			<img src="./resources/images/information-campus.jpg">
-			<div class="info-content">
-				<h4>Our campus</h4>
-				<p id="info">Find which campus is close by you</p>
-				<p><a href="#">Read more</a></p>
+			<div class="info-box">
+				<img src="./resources/images/information-campus.jpg">
+				<div class="info-content">
+					<h4>Our campus</h4>
+					<p id="info">Find which campus is close by you</p>
+					<p><a href="#">Read more</a></p>
+				</div>
 			</div>
-		</div>
 
-		<div class="info-box">
-			<img src="./resources/images/information-guest-lecture.jpg">
-			<div class="info-content">
-				<h4>Our guest lecture</h4>
-				<p id="info">Join a keynote with Oliver Sack about music in medical treatment</p>
-				<p><a href="#">Read more</a></p>
+			<div class="info-box">
+				<img src="./resources/images/information-guest-lecture.jpg">
+				<div class="info-content">
+					<h4>Our guest lecture</h4>
+					<p id="info">Join a keynote with Oliver Sack about music in medical treatment</p>
+					<p><a href="#">Read more</a></p>
+				</div>
 			</div>
 		</div>
 	</div>
@@ -150,7 +151,7 @@
 <!-- Exhibit Section -->
 
 <div class="exhibit">
-	<h3 id="title-md">Thesis Exhibit</h3>
+	<h3>Thesis Exhibit</h3>
 	<div class="exhibit-container">
 		<div class="main-exhibit">
 			<video controls loop>
