--- a/index.html
+++ b/index.html
@@ -25,6 +25,17 @@
 			<li><a href="#">Sign in</a></li>
 		</ul>
 	</div>
+
+	<!-- Media query -->
+	<div class="mobile-menu">
+		<div class="icons">
+			<img src="./resources/images/ic-logo.svg">
+			<img src="./resources/images/ic-on-campus.svg">
+			<img src="./resources/images/ic-online.svg">
+			<img src="./resources/images/ic-login.svg">
+		</div>
+	</div>
+
 </div>
 
 <!-- Banner section -->
@@ -33,9 +44,11 @@
 	<img src="./resources/images/banner.jpg">
 	<div class="banner-content">
 		<h2>Learn something new everyday</h2>
-		<h4>because you might find something precious.</h4>
+		<h4>because you might find something really interesting.</h4>
 		<h4>(in my case, coding.)</h4>
-		<a href="#">Start here</a>
+		<div class="button">
+			<a href="#">Start here</a>
+		</div>
 	</div> 
 </div>
 
@@ -55,8 +68,14 @@
 		<div class="sub-article">
 			<div class="info-box">
 				<img src="./resources/images/information-orientation.jpg">
+				
+				<!-- Media -->
+				<div class="mobile-img">
+					<img src="./resources/images/information-orientation-mobile.jpg">
+				</div>
+
 				<div class="info-content">
-					<h4>Orientation Date</h4>
+					<h4>Orientation date</h4>
 					<p id="info">Tue 10/11 &amp; Wed 10/12 8am - 3pm</p>
 					<p><a href="#">Read more</a></p>
 				</div>
@@ -64,6 +83,12 @@
 
 			<div class="info-box">
 				<img src="./resources/images/information-campus.jpg">
+				
+				<!-- Media -->
+				<div class="mobile-img">
+					<img src="./resources/images/information-campus-mobile.jpg">
+				</div>
+
 				<div class="info-content">
 					<h4>Our campus</h4>
 					<p id="info">Find which campus is close by you</p>
@@ -73,6 +98,10 @@
 
 			<div class="info-box">
 				<img src="./resources/images/information-guest-lecture.jpg">
+				<!-- Media -->
+				<div class="mobile-img">
+					<img src="./resources/images/information-guest-lecture-mobile.jpg">
+				</div>
 				<div class="info-content">
 					<h4>Our guest lecture</h4>
 					<p id="info">Join a keynote with Oliver Sack about music in medical treatment</p>
@@ -146,6 +175,28 @@
 			</div>
 		</div>
 	</div>
+
+	<!-- Mobile tabs -->
+ 	<div class="mobile-tabs">
+ 		<div class="tabs">
+ 			<h3>Software engineering</h3>
+ 		</div>
+ 		<div class="tabs">
+ 			<h3>Computer art</h3>
+ 		</div>
+ 		<div class="tabs">
+ 			<h3>Design</h3>
+ 		</div>
+ 		<div class="tabs">
+ 			<h3>Data</h3>
+ 		</div>
+ 		<div class="tabs">
+ 			<h3>Business</h3>
+ 		</div>
+ 		<div class="tabs">
+ 			<h3>Marketing</h3>
+ 		</div>
+ 	</div>
 </div>
 
 <!-- Exhibit Section -->
@@ -186,8 +237,8 @@
 <div class="footer">
 	<h6>&copy; 2016 Colmar Academy. All rights reserved</h6>
 	<div class="legal">
-		<h6>Terms</h6>
-		<h6>Privacy</h6>
+		<h6><a href="#">Terms</a></h6>
+		<h6><a href="#">Privacy</a></h6>
 	</div>
 </div>
 
