Still needs mobile images

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 			<img src="./resources/images/information-main.jpg">
 			<div class="article-support">
 				<h3>It doesn't hurt to keep practicing</h3>
-				<p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam at commondo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, effictur dolor consequat, trisque ligula."</p>
-				<h6>Emanuel, Sr Strategist at Hiring.com</h6>
+				<p>"When I started learning how to code earlier this year, everything was too intricate for me to even to look at. But just like everyone else, when I made my first 'Hello World' display in the broswer, it was truly a WOW moment I will not forget. For a week I couldn't understand flexbox, and I even dreamed about it. Now a month later, I flexbox heck out of everything."</p>
+				<h6>Mechee, an amateur in Los Angeles</h6>
 			</div>
 		</div>
 	
