--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 			<div class="article-support">
 				<h3>It doesn't hurt to keep practicing</h3>
 				<p>"When I started learning how to code earlier this year, everything was too intricate for me to even to look at. But just like everyone else, when I made my first 'Hello World' display in the broswer, it was truly a WOW moment I will not forget. For a week I couldn't understand flexbox, and I even dreamed about it. Now a month later, I flexbox heck out of everything."</p>
-				<h6>Mechee, an amateur in Los Angeles</h6>
+				<h6>Mechee, an amateur program in Los Angeles</h6>
 			</div>
 		</div>
 	
