--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
 			<div class="article-support">
 				<h3>It doesn't hurt to keep practicing</h3>
 				<p>"When I started learning how to code earlier this year, everything was too intricate for me to even to look at. But just like everyone else, when I made my first 'Hello World' display in the broswer, it was truly a WOW moment I will not forget. For a week I couldn't understand flexbox, and I even dreamed about it. Now a month later, I flexbox heck out of everything."</p>
-				<h6>Mechee, an amateur program in Los Angeles</h6>
+				<h6>Mechee, an amateur developer in Los Angeles</h6>
 			</div>
 		</div>
 	
 		<div class="sub-article">
 			<div class="info-box">
-				<img src="./resources/images/information-orientation.jpg">
+				<img src="./resources/images/information-orientation.jpg" id="pc-img" id="pc-img">
 				
 				<!-- Media -->
 				<div class="mobile-img">
@@ -82,7 +82,7 @@
 			</div>
 
 			<div class="info-box">
-				<img src="./resources/images/information-campus.jpg">
+				<img src="./resources/images/information-campus.jpg" id="pc-img">
 				
 				<!-- Media -->
 				<div class="mobile-img">
@@ -97,7 +97,7 @@
 			</div>
 
 			<div class="info-box">
-				<img src="./resources/images/information-guest-lecture.jpg">
+				<img src="./resources/images/information-guest-lecture.jpg" id="pc-img">
 				<!-- Media -->
 				<div class="mobile-img">
 					<img src="./resources/images/information-guest-lecture-mobile.jpg">
